Change app name

--- a/app/app.json
+++ b/app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "app-achieve-it",
+    "name": "Achieve It",
     "slug": "app-achieve-it",
     "version": "1.0.1",
     "orientation": "portrait",
